--- a/app/backend/packages/sitepackage_nessa/composer.json
+++ b/app/backend/packages/sitepackage_nessa/composer.json
@@ -5,13 +5,23 @@
     "license": "proprietary",
     "require": {
         "php": "^7.4 || ^8.1",
-        "typo3/cms-core": "^11.5",
+        "typo3/cms-core": "^11",
         "starterteam/starter": "^4.3",
         "starterteam/starter-nessa": "^4.3"
     },
-    "extra": {
-        "typo3/cms": {
-            "extension-key": "sitepackage_nessa"
-        }
-    }
+	"config": {
+		"vendor-dir": ".Build/vendor",
+		"bin-dir": ".Build/bin",
+		"allow-plugins": {
+			"typo3/class-alias-loader": true,
+			"typo3/cms-composer-installers": true
+		}
+	},
+	"extra": {
+		"typo3/cms": {
+			"extension-key": "sitepackage_nessa",
+			"app-dir": ".Build",
+			"web-dir": ".Build/public"
+		}
+	}
 }
