--- a/app/backend/packages/starter_twig_news/composer.json
+++ b/app/backend/packages/starter_twig_news/composer.json
@@ -10,9 +10,9 @@
         }
     ],
     "require": {
-        "georgringer/news": "^9.4",
+        "georgringer/news": "^9",
         "php": "^7.4 || ^8.1",
-        "typo3/cms-core": "^11.5",
+        "typo3/cms-core": "^11",
         "starterteam/starter-twig": "^4.3"
     },
     "autoload": {
@@ -20,12 +20,22 @@
             "StarterTeam\\StarterTwigNews\\": "Classes"
         }
     },
-    "extra": {
-        "branch-alias": {
-            "dev-main": "4.4-dev"
-        },
-        "typo3/cms": {
-            "extension-key": "starter_twig_news"
-        }
-    }
+	"config": {
+		"vendor-dir": ".Build/vendor",
+		"bin-dir": ".Build/bin",
+		"allow-plugins": {
+			"typo3/class-alias-loader": true,
+			"typo3/cms-composer-installers": true
+		}
+	},
+	"extra": {
+		"branch-alias": {
+			"dev-main": "4.4-dev"
+		},
+		"typo3/cms": {
+			"extension-key": "starter_twig_news",
+			"app-dir": ".Build",
+			"web-dir": ".Build/public"
+		}
+	}
 }
