[TASK][DEVOPS] Update package monorepo to version 11.2.19 (before 10.3.3)

--- a/app/backend/composer.json
+++ b/app/backend/composer.json
@@ -26,14 +26,7 @@
         "helhum/dotenv-connector": "^3.0",
         "helhum/typo3-console": "^7.1",
         "ichhabrecht/content-defender": "^3.2",
-        "pti/pti": "dev-feature/support_t3v11 || dev-master",
-        "starterteam/site-package-freya": "dev-main",
-        "starterteam/site-package-nessa": "dev-main",
-        "starterteam/starter": "dev-main",
-        "starterteam/starter-freya": "dev-main",
-        "starterteam/starter-nessa": "dev-main",
-        "starterteam/starter-twig": "dev-main",
-        "starterteam/starter-twig-news": "dev-main",
+        "pti/pti": "dev-feature/support_t3v11 || ^3 || dev-master",
         "twig/twig": "^3",
         "typo3/cms-backend": "^11.5",
         "typo3/cms-belog": "^11.5",
@@ -68,7 +61,7 @@
         "phpstan/phpstan": "^1.9",
         "saschaegerer/phpstan-typo3": "^1.8",
         "ssch/typo3-rector": "^1.1",
-        "symplify/monorepo-builder": "^10.0",
+        "symplify/monorepo-builder": "^11.2",
         "typo3/coding-standards": "^0.6.1"
     },
     "autoload": {
