[DEVOPS] Define docker image to use for documentation building

--- a/.build/ci/documentation.yml
+++ b/.build/ci/documentation.yml
@@ -1,5 +1,5 @@
 .documentation:
-  image: $CI_REGISTRY_IMAGE:backend
+  image: $CI_REGISTRY_IMAGE:backend-8.1
   variables:
     DOC_FOLDER: "./documentation"
     STATIC_FOLDER: "$DOC_FOLDER/static/"
