--- a/.build/ci/linting-backend.yml
+++ b/.build/ci/linting-backend.yml
@@ -5,7 +5,7 @@
     SCAN_FOLDER: "./app/backend/packages"
   parallel:
     matrix:
-      - PHP_VERSION: ['7.4', '8.1']
+      - PHP_VERSION: ['8.2']
   before_script:
     - mv app/backend/composer.json app/backend/composer.json.orig
     - mv app/backend/composer.lock app/backend/composer.lock.orig
@@ -14,11 +14,11 @@
     - php -v | grep '^PHP';
     - |
       composer require --no-ansi --no-interaction --no-progress --no-install \
-        typo3/cms-core:^11.5.24 \
-        typo3/cms-backend:^11.5.24 \
-        typo3/cms-frontend:^11.5.24 \
-        typo3/cms-install:^11.5.24 \
-        typo3/cms-fluid:^11.5.24 \
+        typo3/cms-core:^12.4.19 \
+        typo3/cms-backend:^12.4.19 \
+        typo3/cms-frontend:^12.4.19 \
+        typo3/cms-install:^12.4.19 \
+        typo3/cms-fluid:^12.4.19 \
         -d app/backend
       composer update --no-ansi --no-interaction --no-progress --with-dependencies -d app/backend;
   rules:
