--- a/app/backend/composer.json
+++ b/app/backend/composer.json
@@ -1,6 +1,6 @@
 {
     "name": "starterteam/base",
-    "description": "TYPO3 CMS Distribution with TYPO3-Console and Surf support",
+    "description": "TYPO3 CMS Distribution of StarterTeam",
     "authors": [
         {
             "name": "Christian Wolfram",
@@ -13,63 +13,48 @@
         {
             "name": "Marcel Schmid",
             "email": "m.schmid@visual-fx.ch"
-        },
-        {
-            "name": "Jens Seiller",
-            "email": "buero@jdd-webdesign.de"
         }
     ],
     "require": {
-        "php": "^7.4 || ^8.1",
+        "php": "^8.2",
         "cweagans/composer-patches": "^1.7",
-        "georgringer/news": "^9.4",
-        "helhum/dotenv-connector": "^3.0",
-        "helhum/typo3-console": "^7.1",
-        "ichhabrecht/content-defender": "^3.2",
-        "pti/pti": "dev-feature/support_t3v11",
-        "starterteam/site-package-freya": "@dev",
-        "starterteam/site-package-nessa": "@dev",
-        "starterteam/starter": "@dev",
-        "starterteam/starter-freya": "@dev",
-        "starterteam/starter-nessa": "@dev",
-        "starterteam/starter-twig": "@dev",
-        "starterteam/starter-twig-news": "@dev",
-        "twig/twig": "^3",
-        "typo3/cms-backend": "^11.5",
-        "typo3/cms-belog": "^11.5",
-        "typo3/cms-beuser": "^11.5",
-        "typo3/cms-core": "^11.5",
-        "typo3/cms-extbase": "^11.5",
-        "typo3/cms-extensionmanager": "^11.5",
-        "typo3/cms-filelist": "^11.5",
-        "typo3/cms-fluid": "^11.5",
-        "typo3/cms-fluid-styled-content": "^11.5",
-        "typo3/cms-form": "^11.5",
-        "typo3/cms-frontend": "^11.5",
-        "typo3/cms-impexp": "^11.5",
-        "typo3/cms-info": "^11.5",
-        "typo3/cms-install": "^11.5",
-        "typo3/cms-lowlevel": "^11.5",
-        "typo3/cms-recordlist": "^11.5",
-        "typo3/cms-redirects": "^11.5",
-        "typo3/cms-reports": "^11.5",
-        "typo3/cms-rte-ckeditor": "^11.5",
-        "typo3/cms-scheduler": "^11.5",
-        "typo3/cms-seo": "^11.5",
-        "typo3/cms-setup": "^11.5",
-        "typo3/cms-sys-note": "^11.5",
-        "typo3/cms-t3editor": "^11.5",
-        "typo3/cms-tstemplate": "^11.5",
-        "typo3/cms-viewpage": "^11.5"
+        "helhum/dotenv-connector": "^3.1",
+        "helhum/typo3-console": "^8.1",
+        "typo3/cms-backend": "^12.4",
+        "typo3/cms-belog": "^12.4",
+        "typo3/cms-beuser": "^12.4",
+        "typo3/cms-core": "^12.4",
+        "typo3/cms-extbase": "^12.4",
+        "typo3/cms-extensionmanager": "^12.4",
+        "typo3/cms-filelist": "^12.4",
+		"typo3/cms-filemetadata": "^12.4",
+        "typo3/cms-fluid": "^12.4",
+        "typo3/cms-fluid-styled-content": "^12.4",
+        "typo3/cms-frontend": "^12.4",
+        "typo3/cms-impexp": "^12.4",
+        "typo3/cms-info": "^12.4",
+        "typo3/cms-install": "^12.4",
+        "typo3/cms-lowlevel": "^12.4",
+        "typo3/cms-redirects": "^12.4",
+        "typo3/cms-reports": "^12.4",
+        "typo3/cms-rte-ckeditor": "^12.4",
+        "typo3/cms-scheduler": "^12.4",
+        "typo3/cms-seo": "^12.4",
+        "typo3/cms-setup": "^12.4",
+        "typo3/cms-sys-note": "^12.4",
+        "typo3/cms-t3editor": "^12.4",
+        "typo3/cms-tstemplate": "^12.4",
+        "typo3/cms-viewpage": "^12.4"
     },
     "require-dev": {
-        "michielroos/typo3scan": "^1.7",
-        "phpstan/extension-installer": "^1.2",
-        "phpstan/phpstan": "^1.9",
-        "saschaegerer/phpstan-typo3": "^1.8",
-        "ssch/typo3-rector": "^1.1",
-        "symplify/monorepo-builder": "^11.2",
-        "typo3/coding-standards": "^0.6.1"
+		"helmich/typo3-typoscript-lint": "^3.2",
+		"michielroos/typo3scan": "^1.7",
+		"phpstan/extension-installer": "^1.4",
+		"phpstan/phpstan": "^1.11",
+		"saschaegerer/phpstan-typo3": "^1.10",
+		"ssch/typo3-rector": "^2.6",
+		"symplify/monorepo-builder": "^11.2",
+		"typo3/coding-standards": "^0.8.0"
     },
     "autoload": {
         "psr-4": {
@@ -91,10 +76,6 @@
         {
             "type": "composer",
             "url": "https://packagist.starter.team"
-        },
-        {
-            "type": "vcs",
-            "url": "https://github.com/chriwo/typo3-pti.git"
         }
     ],
     "extra": {
@@ -115,7 +96,6 @@
         "composer-exit-on-patch-failure": true,
         "patches": {
             "pti/pti": {
-                "Prepend site base uri to assets": "patches/pti/pti_prepend_site_uri_assets.patch",
                 "Make file collection records renderable": "patches/pti/make_file_collections_renderable.patch"
             }
         }
@@ -143,50 +123,20 @@
     },
     "scripts": {
         "ci:php:cs": [
-            "php-cs-fixer fix --config=../../.build/tools/.php-cs-fixer.php -v --dry-run --using-cache no --diff",
-            "php-cs-fixer fix --config=../../.build/tools/.php-cs-fixer-nonclasses.php -v --dry-run --using-cache no --diff"
+            "php-cs-fixer fix --config=../../.build/tools/.php-cs-fixer.php -v --dry-run --using-cache no --diff"
         ],
         "ci:php:cs-fix": [
-            "php-cs-fixer fix --config=../../.build/tools/.php-cs-fixer.php -v --using-cache no",
-            "php-cs-fixer fix --config=../../.build/tools/.php-cs-fixer-nonclasses.php -v --using-cache no"
+            "php-cs-fixer fix --config=../../.build/tools/.php-cs-fixer.php -v --using-cache no"
         ],
         "ci:php:stan": [
-            "@ci:php:stan8.1"
+			"phpstan --configuration=../../.build/tools/phpstan.neon"
         ],
         "ci:php:stan-baseline": [
-            "@ci:php:stan-baseline8.1"
-        ],
-        "ci:php:stan8.1": [
-            "phpstan --configuration=../../.build/tools/phpstan.neon"
-        ],
-        "ci:php:stan-baseline8.1": [
-            "phpstan --configuration=../../.build/tools/phpstan.neon --generate-baseline=../../.build/tools/phpstan-baseline.neon"
-        ],
-        "ci:php:stan7.4": [
-            "phpstan --configuration=../../.build/tools/phpstan-74.neon"
-        ],
-        "ci:php:stan-baseline7.4": [
-            "phpstan --configuration=../../.build/tools/phpstan-74.neon --generate-baseline=../../.build/tools/phpstan-baseline-74.neon"
+			"phpstan --configuration=../../.build/tools/phpstan.neon --generate-baseline=../../.build/tools/phpstan-baseline.neon"
         ],
         "ci:php:rector": [
-            "@ci:php:rector8.1"
-        ],
-        "ci:php:rector8.1": [
             "rector process --dry-run --clear-cache --config=../../.build/tools/rector.php"
-        ],
-        "ci:php:rector7.4": [
-            "rector process --dry-run --clear-cache --config=../../.build/tools/rector-74.php"
-        ],
-        "create-symlinks": [
-            "ln -sf vendor/helhum/typo3-console/typo3cms typo3cms"
-        ],
-        "post-install-cmd": [
-            "@create-symlinks"
-        ],
-        "post-update-cmd": [
-            "@create-symlinks"
         ]
     },
-    "minimum-stability": "dev",
     "prefer-stable": true
 }
