--- a/app/backend/packages/customer_sitepackage/composer.json
+++ b/app/backend/packages/customer_sitepackage/composer.json
@@ -4,9 +4,9 @@
     "description": "StarterTeam basic sitepackage extension",
     "license": "proprietary",
     "require": {
-        "php": "^7.4 || ^8.1",
-        "typo3/cms-core": "^11.5",
-        "starterteam/starter": "^4.5"
+        "php": "^8.2",
+        "typo3/cms-core": "^12.4 || ^13.0",
+        "starterteam/starter": "^4.5 || dev-main"
     },
     "suggest": {
         "starterteam/starter-freya": "Frontend theme based on Twig template engine",
