--- a/.build/ci/container-build.yml
+++ b/.build/ci/container-build.yml
@@ -1,24 +1,3 @@
-.build-container:
-  stage: devops-build
-  image: docker:19.03.12
-  services:
-    - docker:19.03.12-dind
-  parallel:
-    matrix:
-      - PHP_VERSION: ['8.2']
-  variables:
-    ALPINE_VERSION: '3.12'
-    COMPOSER_VERSION: '2'
-    NODE_VERSION: '14.15.1'
-    SURF_VERSION: '2.3'
-  script:
-    - docker login -u "$CI_REGISTRY_USER" -p "$CI_REGISTRY_PASSWORD" $CI_REGISTRY
-    - docker build -t $DOCKER_IMAGE_TAG $DOCKER_IMAGE_PATH --build-arg PHP_VERSION="$PHP_VERSION" --build-arg ALPINE_VERSION="$ALPINE_VERSION" --build-arg COMPOSER_VERSION="$COMPOSER_VERSION" --build-arg NODE_VERSION="$NODE_VERSION" --build-arg SURF_VERSION="$SURF_VERSION"
-    - docker push $DOCKER_IMAGE_TAG
-  rules:
-    - changes:
-        - $DOCKER_IMAGE_PATH/*
-        - ./.build/ci/container-build.yml
 
 stages:
   - devops-build
@@ -27,7 +6,46 @@ stages:
 # Job to build a docker container for general backend linting
 ##
 build:backend-lint-container:
-  extends: .build-container
+  stage: devops-build
+  image: docker:20.10.16
+  services:
+    - docker:20.10.16-dind
+  parallel:
+    matrix:
+      - PHP_VERSION: [ '8.2' ]
   variables:
     DOCKER_IMAGE_TAG: $CI_REGISTRY_IMAGE:backend-$PHP_VERSION
-    DOCKER_IMAGE_PATH: ./.build/docker/lint-backend/
+    DOCKER_IMAGE_PATH: .build/docker/lint-backend/
+  script:
+    - docker login -u "$CI_REGISTRY_USER" -p "$CI_REGISTRY_PASSWORD" $CI_REGISTRY
+    - docker build -t $DOCKER_IMAGE_TAG $DOCKER_IMAGE_PATH --build-arg PHP_VERSION="$PHP_VERSION"
+    - docker push $DOCKER_IMAGE_TAG
+  rules:
+    - if: '$CI_PIPELINE_SOURCE == "merge_request_event" || $CI_COMMIT_BRANCH == "main"'
+      changes:
+        - .build/ci/container-build.yml
+        - .build/docker/lint-backend/*
+
+##
+# Job to build a docker container for general frontend linting
+##
+build:frontend-lint-container:
+  stage: devops-build
+  image: docker:20.10.16
+  services:
+    - docker:20.10.16-dind
+  parallel:
+    matrix:
+      - NODE_VERSION: [ '16.20.1' ]
+  variables:
+    DOCKER_IMAGE_TAG: $CI_REGISTRY_IMAGE:frontend-$NODE_VERSION
+    DOCKER_IMAGE_PATH: ./.build/docker/lint-frontend/
+  script:
+    - docker login -u "$CI_REGISTRY_USER" -p "$CI_REGISTRY_PASSWORD" $CI_REGISTRY
+    - docker build -t $DOCKER_IMAGE_TAG $DOCKER_IMAGE_PATH --build-arg NODE_VERSION="$NODE_VERSION"
+    - docker push $DOCKER_IMAGE_TAG
+  rules:
+    - if: '$CI_PIPELINE_SOURCE == "merge_request_event" || $CI_COMMIT_BRANCH == "main"'
+      changes:
+        - .build/ci/container-build.yml
+        - .build/docker/lint-frontend/*
