--- a/app/frontend/starter_nessa_starterkit/package.json
+++ b/app/frontend/starter_nessa_starterkit/package.json
@@ -13,9 +13,11 @@
 		"dev:webpack": "cross-env NODE_ENV=development webpack --watch --config config/webpack.development.js",
 		"build": "npm run build:webpack",
 		"build:webpack": "cross-env NODE_ENV=production webpack --config config/webpack.production.js",
-		"lint": "npm run lint:js && npm run lint:css",
-		"lint:js": "eslint . --fix",
-		"lint:css": "stylelint \"./src/assets/**/*.scss\" --fix --config .stylelintrc.js --ignore-path .stylelintignore",
+		"lint": "npm run lint:js && npm run lint:scss",
+		"lint:js": "eslint . --fix-dry-run",
+		"lint:scss": "stylelint \"./src/**/*.scss\" --config .stylelintrc.js --ignore-path .stylelintignore",
+		"lint:fix:js": "eslint . --fix",
+		"lint:fix:scss": "stylelint \"./src/**/*.scss\" --fix --config .stylelintrc.js --ignore-path .stylelintignore",
 		"test": "echo \"No test specified\" && exit 0"
 	},
 	"dependencies": {
