--- a/app/backend/composer.json
+++ b/app/backend/composer.json
@@ -20,6 +20,7 @@
         "cweagans/composer-patches": "^1.7",
         "helhum/dotenv-connector": "^3.1",
         "helhum/typo3-console": "^8.1",
+        "starterteam/starter": "dev-main",
         "typo3/cms-backend": "^12.4",
         "typo3/cms-belog": "^12.4",
         "typo3/cms-beuser": "^12.4",
@@ -27,7 +28,7 @@
         "typo3/cms-extbase": "^12.4",
         "typo3/cms-extensionmanager": "^12.4",
         "typo3/cms-filelist": "^12.4",
-		"typo3/cms-filemetadata": "^12.4",
+        "typo3/cms-filemetadata": "^12.4",
         "typo3/cms-fluid": "^12.4",
         "typo3/cms-fluid-styled-content": "^12.4",
         "typo3/cms-frontend": "^12.4",
