[!!!][TASK] Make M27-Download compatible with TYPO3v12 and PHP 8.3
The CType has changed from `starter_download` to `starter_m27_download`. An UpgradeWizard migrate the CType, but manuel configuration
in TypoScript and PageTypoScript must be changed manuel.

A default frontend template is defined for the extension EXT:starter_freya, have an initial output of this content element.

It's now also possible to use file collection records to create a download list. Single files and file collections can also mixed inside the content element.

--- a/app/backend/composer.json
+++ b/app/backend/composer.json
@@ -96,8 +96,9 @@
             "cms-package-dir": "{$vendor-dir}/typo3/cms"
         },
         "enable-patching": true,
-        "composer-exit-on-patch-failure": true
-    },
+        "composer-exit-on-patch-failure": true,
+		"patches-file": "composer.patches.json"
+	},
     "config": {
         "secure-http": true,
         "optimize-autoloader": true,
