--- a/app/backend/composer.json
+++ b/app/backend/composer.json
@@ -122,35 +122,35 @@
     },
     "scripts": {
         "ci:php:cs": [
-            "php-cs-fixer fix --config=../../.build/tools/.php-cs-fixer.php -v --dry-run --using-cache no --diff"
+            "php-cs-fixer fix --config=../../build/.php-cs-fixer.php -v --dry-run --using-cache no --diff"
         ],
         "ci:php:cs-fix": [
-            "php-cs-fixer fix --config=../../.build/tools/.php-cs-fixer.php -v --using-cache no"
+            "php-cs-fixer fix --config=../../build/.php-cs-fixer.php -v --using-cache no"
         ],
         "ci:php:stan": [
-			"phpstan --configuration=../../.build/tools/phpstan.neon"
+			"phpstan --configuration=../../build/phpstan.neon"
         ],
         "ci:php:stan-baseline": [
-			"phpstan --configuration=../../.build/tools/phpstan.neon --generate-baseline=../../.build/tools/phpstan-baseline.neon"
+			"phpstan --configuration=../../build/phpstan.neon --generate-baseline=../../build/phpstan-baseline.neon"
         ],
         "ci:php:rector": [
-            "rector process --dry-run --clear-cache --config=../../.build/tools/rector.php"
+            "rector process --dry-run --clear-cache --config=../../build/rector.php"
         ],
 		"ci:typoscript": [
-			"typoscript-lint --config=../../.build/typoscript-lint.yml --fail-on-warnings packages/customer_sitepackage/Configuration/TypoScript/",
-			"typoscript-lint --config=../../.build/typoscript-lint.yml --fail-on-warnings packages/customer_sitepackage/Configuration/TSConfig/",
-			"typoscript-lint --config=../../.build/typoscript-lint.yml --fail-on-warnings packages/sitepackage_freya/Configuration/TypoScript/",
-			"typoscript-lint --config=../../.build/typoscript-lint.yml --fail-on-warnings packages/sitepackage_freya/Configuration/TSConfig/",
-			"typoscript-lint --config=../../.build/typoscript-lint.yml --fail-on-warnings packages/sitepackage_nessa/Configuration/TypoScript/",
-			"typoscript-lint --config=../../.build/typoscript-lint.yml --fail-on-warnings packages/sitepackage_nessa/Configuration/TSConfig/",
-			"typoscript-lint --config=../../.build/typoscript-lint.yml --fail-on-warnings packages/starter/Configuration/TypoScript/",
-			"typoscript-lint --config=../../.build/typoscript-lint.yml --fail-on-warnings packages/starter/Configuration/TSConfig/",
-			"typoscript-lint --config=../../.build/typoscript-lint.yml --fail-on-warnings packages/starter_freya/Configuration/TypoScript/",
-			"typoscript-lint --config=../../.build/typoscript-lint.yml --fail-on-warnings packages/starter_freya/Configuration/TSConfig/",
-			"typoscript-lint --config=../../.build/typoscript-lint.yml --fail-on-warnings packages/starter_nessa/Configuration/TypoScript/",
-			"typoscript-lint --config=../../.build/typoscript-lint.yml --fail-on-warnings packages/starter_nessa/Configuration/TSConfig/",
-			"typoscript-lint --config=../../.build/typoscript-lint.yml --fail-on-warnings packages/starter_twig/Configuration/TypoScript/",
-			"typoscript-lint --config=../../.build/typoscript-lint.yml --fail-on-warnings packages/starter_twig_news/Configuration/TypoScript/",
+			"typoscript-lint --config=../../build/typoscript-lint.yml --fail-on-warnings packages/customer_sitepackage/Configuration/TypoScript/",
+			"typoscript-lint --config=../../build/typoscript-lint.yml --fail-on-warnings packages/customer_sitepackage/Configuration/TSConfig/",
+			"typoscript-lint --config=../../build/typoscript-lint.yml --fail-on-warnings packages/sitepackage_freya/Configuration/TypoScript/",
+			"typoscript-lint --config=../../build/typoscript-lint.yml --fail-on-warnings packages/sitepackage_freya/Configuration/TSConfig/",
+			"typoscript-lint --config=../../build/typoscript-lint.yml --fail-on-warnings packages/sitepackage_nessa/Configuration/TypoScript/",
+			"typoscript-lint --config=../../build/typoscript-lint.yml --fail-on-warnings packages/sitepackage_nessa/Configuration/TSConfig/",
+			"typoscript-lint --config=../../build/typoscript-lint.yml --fail-on-warnings packages/starter/Configuration/TypoScript/",
+			"typoscript-lint --config=../../build/typoscript-lint.yml --fail-on-warnings packages/starter/Configuration/TSConfig/",
+			"typoscript-lint --config=../../build/typoscript-lint.yml --fail-on-warnings packages/starter_freya/Configuration/TypoScript/",
+			"typoscript-lint --config=../../build/typoscript-lint.yml --fail-on-warnings packages/starter_freya/Configuration/TSConfig/",
+			"typoscript-lint --config=../../build/typoscript-lint.yml --fail-on-warnings packages/starter_nessa/Configuration/TypoScript/",
+			"typoscript-lint --config=../../build/typoscript-lint.yml --fail-on-warnings packages/starter_nessa/Configuration/TSConfig/",
+			"typoscript-lint --config=../../build/typoscript-lint.yml --fail-on-warnings packages/starter_twig/Configuration/TypoScript/",
+			"typoscript-lint --config=../../build/typoscript-lint.yml --fail-on-warnings packages/starter_twig_news/Configuration/TypoScript/"
 		]
 	},
 	"minimum-stability": "dev",
