--- a/.github/workflows/lint-backend-code.yml
+++ b/.github/workflows/lint-backend-code.yml
@@ -136,45 +136,45 @@ jobs:
       - name: Run rector
         run: composer ci:php:rector --working-dir=${{ env.BACKEND_DIRECTORY }}
 
-  typoscript_lint:
-    name: TypoScript lint
-    runs-on: ubuntu-latest
-    continue-on-error: true
-    strategy:
-      # This prevents cancellation of matrix job runs, if one/two already failed and let the
-      # rest matrix jobs be executed anyway.
-      fail-fast: false
-      matrix:
-        php: [ '8.3' ]
-
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-        with:
-          sparse-checkout: |
-            ${{ env.BACKEND_DIRECTORY }}
-            build
-          show-progress: false
-
-      - name: Install PHP
-        uses: shivammathur/setup-php@v2
-        with:
-          coverage: none
-          extensions: intl, zip
-          ini-values: memory_limit=-1, error_reporting=E_ALL, display_errors=On
-          php-version: ${{ matrix.php }}
-
-      - name: Cache Composer packages
-        id: composer-cache
-        uses: actions/cache@v4
-        with:
-          path: vendor
-          key: ${{ runner.os }}-php-${{ hashFiles('**/composer.lock') }}
-          restore-keys: |
-            ${{ runner.os }}-php-
-
-      - name: Install dependencies
-        run: composer install ${{ env.COMPOSER_INSTALL_FLAGS }} ${{ env.COMPOSER_FLAGS }} --working-dir=${{ env.BACKEND_DIRECTORY }}
-
-      - name: Run TypoScript linter
-        run: composer ci:typoscript --working-dir=${{ env.BACKEND_DIRECTORY }}
+#  typoscript_lint:
+#    name: TypoScript lint
+#    runs-on: ubuntu-latest
+#    continue-on-error: true
+#    strategy:
+#      # This prevents cancellation of matrix job runs, if one/two already failed and let the
+#      # rest matrix jobs be executed anyway.
+#      fail-fast: false
+#      matrix:
+#        php: [ '8.3' ]
+#
+#    steps:
+#      - name: Checkout
+#        uses: actions/checkout@v4
+#        with:
+#          sparse-checkout: |
+#            ${{ env.BACKEND_DIRECTORY }}
+#            build
+#          show-progress: false
+#
+#      - name: Install PHP
+#        uses: shivammathur/setup-php@v2
+#        with:
+#          coverage: none
+#          extensions: intl, zip
+#          ini-values: memory_limit=-1, error_reporting=E_ALL, display_errors=On
+#          php-version: ${{ matrix.php }}
+#
+#      - name: Cache Composer packages
+#        id: composer-cache
+#        uses: actions/cache@v4
+#        with:
+#          path: vendor
+#          key: ${{ runner.os }}-php-${{ hashFiles('**/composer.lock') }}
+#          restore-keys: |
+#            ${{ runner.os }}-php-
+#
+#      - name: Install dependencies
+#        run: composer install ${{ env.COMPOSER_INSTALL_FLAGS }} ${{ env.COMPOSER_FLAGS }} --working-dir=${{ env.BACKEND_DIRECTORY }}
+#
+#      - name: Run TypoScript linter
+#        run: composer ci:typoscript --working-dir=${{ env.BACKEND_DIRECTORY }}
