--- a/.github/workflows/split-packages.yml
+++ b/.github/workflows/split-packages.yml
@@ -51,8 +51,8 @@ jobs:
           repository_organization: 'team-started'
           repository_name: '${{ matrix.package.split_repository }}'
           repository_host: github.com
-          user_name: "team-ci"
-          user_email: "team@starter.team"
+          user_name: '${{ env.REPO_USER }}'
+          user_email: '${{ env.REPO_USER_EMAIL }}'
 
       -
         if: "startsWith(github.ref, 'refs/tags/')"
@@ -63,5 +63,5 @@ jobs:
           repository_organization: 'team-started'
           repository_name: '${{ matrix.package.split_repository }}'
           repository_host: github.com
-          user_name: "team-ci"
-          user_email: "team@starter.team"
+          user_name: '${{ env.REPO_USER }}'
+          user_email: '${{ env.REPO_USER_EMAIL }}'
