--- a/.github/workflows/split-packages.yml
+++ b/.github/workflows/split-packages.yml
@@ -45,7 +45,7 @@ jobs:
 
       -
         if: "!startsWith(github.ref, 'refs/tags/')"
-        uses: "symplify/monorepo-split-github-action@2.1"
+        uses: "danharrin/monorepo-split-github-action@v2.3.0"
         with:
           package_directory: ${{ matrix.package.local_path }}
           repository_organization: 'team-started'
@@ -56,7 +56,7 @@ jobs:
 
       -
         if: "startsWith(github.ref, 'refs/tags/')"
-        uses: "symplify/monorepo-split-github-action@2.1"
+        uses: "danharrin/monorepo-split-github-action@v2.3.0"
         with:
           tag: ${GITHUB_REF#refs/tags/}
           package_directory: ${{ matrix.package.local_path }}
