--- a/.github/workflows/split-packages.yml
+++ b/.github/workflows/split-packages.yml
@@ -41,7 +41,9 @@ jobs:
             split_repository: "starter-nessa-starterkit"
 
     steps:
-      -   uses: actions/checkout@v2
+      -
+        name: Checkout code
+        uses: actions/checkout@v4
 
       -
         if: "!startsWith(github.ref, 'refs/tags/')"
