--- a/.github/workflows/split-packages.yml
+++ b/.github/workflows/split-packages.yml
@@ -41,27 +41,29 @@ jobs:
             split_repository: "starter-nessa-starterkit"
 
     steps:
-      -   uses: actions/checkout@v2
+      -
+        name: Checkout code
+        uses: actions/checkout@v4
 
       -
         if: "!startsWith(github.ref, 'refs/tags/')"
-        uses: "symplify/monorepo-split-github-action@2.1"
+        uses: "danharrin/monorepo-split-github-action@v2.3.0"
         with:
           package_directory: ${{ matrix.package.local_path }}
           repository_organization: 'team-started'
           repository_name: '${{ matrix.package.split_repository }}'
           repository_host: github.com
-          user_name: '${{ env.REPO_USER }}'
-          user_email: '${{ env.REPO_USER_EMAIL }}'
+          user_name: '${{ vars.REPO_USER }}'
+          user_email: '${{ vars.REPO_USER_EMAIL }}'
 
       -
         if: "startsWith(github.ref, 'refs/tags/')"
-        uses: "symplify/monorepo-split-github-action@2.1"
+        uses: "danharrin/monorepo-split-github-action@v2.3.0"
         with:
           tag: ${GITHUB_REF#refs/tags/}
           package_directory: ${{ matrix.package.local_path }}
           repository_organization: 'team-started'
           repository_name: '${{ matrix.package.split_repository }}'
           repository_host: github.com
-          user_name: '${{ env.REPO_USER }}'
-          user_email: '${{ env.REPO_USER_EMAIL }}'
+          user_name: '${{ vars.REPO_USER }}'
+          user_email: '${{ vars.REPO_USER_EMAIL }}'
